[package]
name = "gasket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
actix-web = { version = "3.3.2" } #, features = ["openssl"] }
futures = "0.3.15"
log = "0.4.0"
env_logger = "0.8.3"
url = "2.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
